# agentic-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  RUN_DEMO.md  SOLUTION_SUMMARY.md  STATE_ACCESS_FIX.md  pyproject.toml  test_api_flow.py  test_complete_order_flow.py  test_frontend_rendering.py  test_full_order_flow.py  test_order_flow.py  test_product_selection_flow.py  要求.md
.cursor/rules/: multi-agent.mdc
config/: tools_config.yaml
examples/: 02_agentic_rag.py  02_langgraph_basics.py  03_complete_system.py  04_agent_as_node.py  06_complete_system.py  07_benchmark.py  agentic_rag.py  business_agent_test.py  enterprise_tools_example.py  multi_agent_example.py  test_confirmation_e2e.py  test_confirmation_mechanism.py  test_intent_integration.py  test_intent_standalone.py  test_multi_step_task_e2e.py
front-chat/: INSTALL.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
front-chat/src/: App.tsx  index.css
src/: __init__.py  main.py
src/agentic_rag/: __init__.py  advance_detector.py  agentic_rag.py  answer_evaluation.py  docs_parser.py  evaluation_config.py  evaluators.py  generator.py  graph.py  llm.py  nodes.py  retriever.py  splitter.py  state.py  threshold_config.py  timing.py  vector_store.py  web_search.py
src/agents/: chat_agent.py
src/api/: executors.py  formatters.py  graph_manager.py  models.py  server.py  streaming_utils.py
src/confirmation/: __init__.py  exceptions.py  manager.py  models.py  selection_manager.py  selection_models.py  selection_storage.py  storage.py
tests/: test_agentic_rag.py
面试题/: 01-LLM基础架构与训练.md  02-SFT数据集构造与优化.md  03-RAG系统与优化.md  04-数据集自动化与多Agent系统.md  05-分布式训练与优化技术.md  06-Prompt优化与评估.md  07-注意力机制与推理优化.md  README.md
(+98 files in other folders)
