[project]
name = "agentic-agent"
version = "0.1.0"
description = "Agentic RAG 从零到精通 - 完整教程"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-chroma>=1.0.0",
    "chromadb>=0.4.22",
    "tiktoken>=0.5.2",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "dotenv>=0.9.9",
    "pypdf2>=3.0.1",
    "pypdf>=6.4.2",
    "docling>=2.65.0",
    "colorama>=0.4.6",
    "langchain-ollama>=1.0.1",
    "langchain-google-genai>=4.0.0",
    # 2025 最佳实践新增依赖
    "rank-bm25>=0.2.2", # BM25 关键词检索
    "sentence-transformers>=2.2.0", # Web Search 回退
    "langchain-experimental>=0.3.0",
    "mcp>=1.25.0",
    "langchain-mcp-adapters>=0.2.1",
    "ddgs>=9.10.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# 其他可选LLM支持
anthropic = [
    "langchain-anthropic",
]
google = [
    "langchain-google-genai",
]
# 安装所有可选依赖: uv sync --extra dev --extra anthropic --extra google
all = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "langchain-anthropic",
    "langchain-google-genai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag", "src/agentic_rag", "src/utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
